--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "packageManager": "yarn@3.3.0",
   "private": true,
   "dependencies": {
+    "clsx": "^1.2.1",
     "core-js": "^3.6.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
