ci: add nx-cloud github workflow

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "nx build",
     "test": "nx test"
   },
+  "engines": {
+    "node": ">=18.12",
+    "yarn": ">=3.3"
+  },
   "packageManager": "yarn@3.3.0",
   "private": true,
   "dependencies": {
