--- a/package.json
+++ b/package.json
@@ -15,47 +15,47 @@
   "private": true,
   "dependencies": {
     "clsx": "^1.2.1",
-    "core-js": "^3.6.5",
+    "core-js": "^3.26.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.4.1",
-    "regenerator-runtime": "0.13.7",
-    "tslib": "^2.3.0"
+    "react-router-dom": "6.4.3",
+    "regenerator-runtime": "0.13.11",
+    "tslib": "^2.4.1"
   },
   "devDependencies": {
-    "@nrwl/cli": "15.1.1",
-    "@nrwl/cypress": "15.1.1",
-    "@nrwl/eslint-plugin-nx": "15.1.1",
-    "@nrwl/jest": "15.1.1",
-    "@nrwl/linter": "15.1.1",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "15.1.1",
-    "@nrwl/web": "15.1.1",
-    "@nrwl/workspace": "15.1.1",
+    "@nrwl/cli": "15.2.1",
+    "@nrwl/cypress": "15.2.1",
+    "@nrwl/eslint-plugin-nx": "15.2.1",
+    "@nrwl/jest": "15.2.1",
+    "@nrwl/linter": "15.2.1",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/react": "15.2.1",
+    "@nrwl/web": "15.2.1",
+    "@nrwl/workspace": "15.2.1",
     "@testing-library/react": "13.4.0",
-    "@types/jest": "28.1.1",
-    "@types/node": "18.7.18",
-    "@types/react": "18.0.20",
-    "@types/react-dom": "18.0.6",
+    "@types/jest": "28.1.8",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
     "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "babel-jest": "28.1.1",
-    "cypress": "^11.0.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "babel-jest": "28.1.3",
+    "cypress": "^11.1.0",
+    "eslint": "~8.28.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
-    "nx": "15.1.1",
-    "prettier": "2.6.2",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.3",
+    "nx": "15.2.1",
+    "prettier": "2.7.1",
     "react-test-renderer": "18.2.0",
-    "ts-jest": "28.0.5",
+    "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
-    "typescript": "4.8.2"
+    "typescript": "4.9.3"
   }
 }
