--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,6 @@
 nodeLinker: node-modules
+cacheFolder: .yarn/cache
+defaultSemverRangePrefix: ""
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
