--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         yarn nx affected --target=lint --parallel=3
         yarn nx affected --target=test --parallel=3 --ci --code-coverage
         yarn nx affected --target=build --parallel=3
-      node-version: 18.12.0
+      node-version: 18.12.1
       yarn-version: 3.3.0
       install-commands: yarn install --immutable
       artifacts-path: |
@@ -38,6 +38,16 @@ jobs:
     uses: nrwl/ci/.github/workflows/nx-cloud-agents.yml@v0.10
     with:
       number-of-agents: 3
-      node-version: 18.12.0
+      node-version: 18.12.1
       yarn-version: 3.3.0
       install-commands: yarn install --immutable
+
+  coverage:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: artifact
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
