--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "vercel": "28.5.5"
   }
 }
