--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
 
   coverage:
     runs-on: ubuntu-latest
+    needs: main
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v3
