ci: add cobertura coverage report

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,14 @@ jobs:
       parallel-commands: |
         yarn nx-cloud record -- yarn nx workspace-lint
         yarn nx-cloud record -- yarn nx format:check
+      # parallel-commands-on-agents: |
+      #   yarn nx affected --target=lint --parallel=3
+      #   yarn nx affected --target=test --parallel=3 --ci --code-coverage
+      #   yarn nx affected --target=build --parallel=3
       parallel-commands-on-agents: |
-        yarn nx affected --target=lint --parallel=3
-        yarn nx affected --target=test --parallel=3 --ci --code-coverage
-        yarn nx run-many --target=build
+        yarn nx run-many --target=lint --parallel=3
+        yarn nx run-many --target=test --parallel=3
+        yarn nx run-many --target=build --parallel=3
       node-version: 18.12.1
       yarn-version: 3.3.0
       install-commands: yarn install --immutable
