--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,5 +59,6 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           directory: coverage
+          file: ./coverage/**/cobertura-coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }}
           verbose: true
