--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,10 +47,12 @@ jobs:
       install-commands: yarn install --immutable
 
   coverage:
-    name: Codecov
+    name: Coverage reports
     runs-on: ubuntu-latest
     needs: main
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
@@ -59,4 +61,3 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          verbose: true
